--- a/firefox-ios/Shared/en-US.lproj/Storage.strings
+++ b/firefox-ios/Shared/en-US.lproj/Storage.strings
@@ -7,9 +7,8 @@
 /* The name of the folder that contains desktop bookmarks in the toolbar. This should match bookmarks.folder.toolbar.label on Android. */
 "Bookmarks Toolbar" = "Bookmarks Toolbar";
 
-/* The title of the folder that contains mobile bookmarks. This should match bookmarks.folder.mobile.label on Android. */
+/* The legacy title of the folder that contains mobile bookmarks. This should match bookmarks.folder.mobile.label on Android. */
 "Mobile Bookmarks" = "Mobile Bookmarks";
 
 /* The name of the folder that contains unsorted desktop bookmarks. This should match bookmarks.folder.unfiled.label on Android. */
 "Unsorted Bookmarks" = "Unsorted Bookmarks";
-
