Update Focus config

--- a/.github/l10n/linter_config_focus.json
+++ b/.github/l10n/linter_config_focus.json
@@ -20,6 +20,8 @@
             "Pocket"
         ],
         "exclusions": [
+            "focus-ios.xliff:Onboarding.PrivacyNotice.Text",
+            "focus-ios.xliff:Onboarding.TermsOfUse.LinkText",
             "focus-ios.xliff:Onboarding.Title",
             "focus-ios.xliff:Open.Firefox",
             "focus-ios.xliff:ShareMenu.GetFirefox",
