[MOB-3189] Add default browser variations english translations (#883)
* [MOB-3189] Add default browser variations english translations

* [MOB-3189] Fix wrong phrasing.

--- a/firefox-ios/Ecosia/L10N/en.lproj/Ecosia.strings
+++ b/firefox-ios/Ecosia/L10N/en.lproj/Ecosia.strings
@@ -228,3 +228,13 @@
 "Be the first to know" = "Be the first to know";
 "Subscribe to our monthly newsletter for updates on your climate impact." = "Subscribe to our monthly newsletter for updates on your climate impact.";
 "Sign up" = "Sign up";
+
+// Default Browser
+"Safely open links from other apps (eg. mails, websites and messages) in Ecosia, turning every tap into action for the planet." = "Safely open links from other apps (eg. mails, websites and messages) in Ecosia, turning every tap into action for the planet.";
+"People who set Ecosia as their default browser plant %@ per year." = "People who set Ecosia as their default browser plant %@ per year.";
+"If all mobile users set Ecosia as their default browser, we could plant an extra %@ annually." = "If all mobile users set Ecosia as their default browser, we could plant an extra %@ annually.";
+"Did you know?" = "Did you know?";
+"6 more trees" = "6 more trees";
+"2 million trees" = "2 million trees";
+"Set Ecosia as default" = "Set Ecosia as default";
+"Make all your browsing green" = "Make all your browsing green";
