[MOB-3199] Default Browser Settings Card (#889)
* [MOB-3199] Implement Settings Card and Detail Page

Implemented by moving the NTPConfigurableNudgeCard into SwiftUI and leverage its details.

* [MOB-3199] Update ConfigurableNudgeCard + Analytics

- Modify the `AppSettingsTableViewController` so that implements the changes needed to display the custom card first and the classic one later
- Replace the `Experiment`naming for a more convenient `Detail` one
- Implemented Analytics to track all the click and dismissal event
- Added animation and configured to play correctly

* [MOB-3199] Update strings in #preview to match correct ones

* [MOB-3199] Improved accessibility of nudge card + detail view

* [MOB-3199] Replace Preview adding macro

* [MOB-3199] Mark card as seen right after showing it

* [MOB-3199] Add debug option to show/hide the card

* [MOB-3199] Default Browser Card is now in in a HeaderFooter

* [MOB-3199] Remove Ecosia's DefaultBrowserSetting

Reset it's settings back to standard Firefox to reduce conflicts

* [MOB-3199] Regenerate Settings section on reset Nudge Card

* [MOB-3199] Optimize changes `AppSettingsTableViewController`

* [MOB-3199] Move Analytics tap on the `onTap()` event

* [MOB-3199] Further optimization to minimize code lines

* [MOB-3199] Update string key to reuse in Setting item

* [MOB-3199] Simplify DefaultBrowserCoordinator's detail show

* [MOB-3199] Add `EcosiaDefaultBrowserSettings` to Search section

* [MOB-3199] Add old Analytics's defaultBrowser action

* [MOB-3199] Adds top padding to the Nudge Card Header

* [MOB-3199] Play Lottie and stop at the end

* [MOB-3199] Update Nudge Card's headerview background

* [MOB-3199] Custom `EcosiaText` to facilitate localization

* [MOB-3199] Improve nudge card shape

* [MOB-3199] Add accesibilityTrait to the whole button

* [MOB-3199] Loop lottie default browser detail animation

* [MOB-3199] Fix CTA button background

* [MOB-3199] Fix button CTA rounded corner

* [MOB-3199] Update to

--- a/firefox-ios/Ecosia/L10N/en.lproj/Ecosia.strings
+++ b/firefox-ios/Ecosia/L10N/en.lproj/Ecosia.strings
@@ -46,8 +46,6 @@
 "We are momentarily unable to load all of your settings." = "We are momentarily unable to load all of your settings.";
 "Continue" = "Continue";
 "Retry" = "Retry";
-"Set Ecosia as default browser" = "Set Ecosia as default browser";
-"Links from websites, emails or messages will automatically open in Ecosia." = "Links from websites, emails or messages will automatically open in Ecosia.";
 "Show Top Sites" = "Show Top Sites";
 "All regions" = "All regions";
 "Refresh" = "Refresh";
@@ -229,3 +227,11 @@
 "Make Ecosia your default browser" = "Make Ecosia your default browser";
 "Set Ecosia as default" = "Set Ecosia as default";
 "Make all your browsing green" = "Make all your browsing green";
+"Default browser" = "Default browser";
+"Make Ecosia your default browser app" = "Make Ecosia your default browser app";
+"Safely open all links from other apps in Ecosia" = "Safely open all links from other apps in Ecosia";
+"Use Ecosia as default" = "Use Ecosia as default";
+"Open **Settings**" = "Open **Settings**";
+"Select **Default Browser App**" = "Select **Default Browser App**";
+"Choose **Ecosia**" = "Choose **Ecosia**";
+"Make default in settings" = "Make default in settings";
